# AoC2023-HS

./: .gitignore  AoC2023.cabal
app/: Main.hs
app/Solutions/: D1.hs  D2.hs  D3.hs  D4.hs
